src/objects/PM_Application__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <formula>Applications__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applications__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applications</label>
        <referenceTo>Applications__c</referenceTo>
        <relationshipLabel>PM Applications</relationshipLabel>
        <relationshipName>PM_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PM Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>